<resources>
    <string name="app_name">Sahayata</string>
    <string name="sahayata">Sahayata</string>
    <string name="tagline">Community for our Superheros</string>
    <string name="title_login">Welcome back\!</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_phone">Phone No.</string>
    <string name="et_hint_name">\Name</string>
    <string name="et_hint_unique_code">Unique Code</string>
    <string name="et_hint_unique_code_">Battalion ID </string>
    <string name="lbl_forget_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="btnn_lbl_signup">Next</string>
    <string name="bt_id_bt">Battalion ID</string>
    <string name="btn_lbl_signup">Sign-up</string>
    <string name="login_phone">Login with Phone!</string>
    <string name="don_t_have_an_account">New to this Platform?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="register"><u>Register</u></string>
    <string name="or_or"><u>OR</u></string>
    <string name="err_msg_enter_email">Please enter Email</string>
    <string name="err_msg_enter_name">Please enter Name</string>
    <string name="err_msg_enter_phone_number">Please enter Phone Number</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>