<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="450dp"
        app:lottie_rawRes="@raw/register"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <com.example.android.sahayata.utils.MSATextView
        android:id="@+id/Sign_up"
        android:layout_width="121dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="208dp"
        android:text="@string/btn_lbl_signup"
        android:textSize="@dimen/title_textSize" />

    <com.example.android.sahayata.utils.MSAEditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="282dp"
        android:ems="10"
        android:hint="@string/et_hint_email_id"
        android:inputType="textEmailAddress" />

    <com.example.android.sahayata.utils.MSAEditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="341dp"
        android:ems="10"
        android:hint="@string/et_hint_name"
        android:inputType="textPersonName" />

    <com.example.android.sahayata.utils.MSAEditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="@string/et_hint_unique_code"
        android:inputType="textPassword" />

    <com.example.android.sahayata.utils.MSAEditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="206dp"
        android:ems="10"
        android:hint="@string/bt_id_bt"
        android:inputType="textPassword" />

    <com.example.android.sahayata.utils.MSAEditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="141dp"
        android:ems="10"
        android:hint="@string/et_hint_phone"
        android:inputType="phone" />

    <com.example.android.sahayata.utils.MSAButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:textSize="@dimen/btn_textSize"
        android:textAllCaps="false"
        android:text="@string/btnn_lbl_signup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <com.example.android.sahayata.utils.MSATextViewBold
            android:id="@+id/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="19dp"

            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize" />

        <com.example.android.sahayata.utils.MSATextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/btn_lbl_login"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize" />



    </LinearLayout>

</RelativeLayout>